fix: navbar is so small on mobile

--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -338,6 +338,8 @@
   animation: header-affix 0.6s ease 1;
   @media (max-width: 991px) {
     padding-top: 7px;
+    padding-left: 0;
+    padding-right: 0;
   }
   .row-1 {
     .left {
